--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "knex": "^0.16.3",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "webpack": "^4.29.4",
