--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "/server/index.js",
   "scripts": {
     "test": "npm test",
-    "build-dev": "webpack --mode development --watch",
-    "build": "webpack --mode production"
+    "start": "nodemon /server/index.js"
   },
   "repository": {
     "type": "git",
@@ -29,14 +28,6 @@
   },
   "homepage": "https://github.com/airbnbers/Thomas-Proxy#readme",
   "devDependencies": {
-    "@babel/core": "^7.3.3",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.5",
-    "knex": "^0.16.3",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "webpack": "^4.29.4",
-    "webpack-cli": "^3.2.3"
+    "knex": "^0.16.3"
   }
 }
