--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "/server/index.js",
   "scripts": {
     "test": "npm test",
-    "start": "nodemon /server/index.js"
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
