--- a/components/checkout-module/package.json
+++ b/components/checkout-module/package.json
@@ -8,6 +8,7 @@
     "node": ">=6.13.0"
   },
   "scripts": {
+    "start": "nodemon server/index.js",
     "test": "jest --forceExit --verbose=false --coverage",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js",
